Deployment/UI-Service/UI.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service
  namespace: mock-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: ui-service
          image: nguyenbavu1902/ui-service:v0.1.4
          ports:
            - containerPort: 80
