Deployment/UI-Service/UI.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: mock-project
spec:
  type: ClusterIP
  selector:
    app: ui-service
  ports:
    - port: 80
      targetPort: 80
